[package]
name = "ranked-ref"
version = "0.1.0"
authors = ["Ilya Maximov <mail@overlisted.net>"]
edition = "2018"

[dependencies]
serenity = "0.9.3"
serde_json = "1.0"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.dashmap]
version = "3.11.10"
features = ["serde"]
